--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -13,9 +13,13 @@
 
   "defaultHousing": [
     {
-      "propertyaddress": "2211 Ala Wai Blvd, Honolulu, HI, 96815",
+      "streetaddress": "2211 Ala Wai Blvd",
+      "city": "Honolulu",
+      "state": "HI",
+      "image": "https://43b301fb2f83bd2719f4-7e2c9a1717b3351cc628e38f0a1ac906.ssl.cf5.rackcdn.com/201803681-condo-townhouse-1xhfwr8-m.jpg",
+      "zipcode":96815,
       "unitnumber": "1407",
-      "propertytype": "Condo/Apartment Unit",
+      "propertytype": "CONDO/APARTMENT UNIT",
       "rentprice": 2000,
       "beds": 2,
       "baths": 1,
@@ -23,9 +27,13 @@
       "description": "Blah Blah Blah"
     },
     {
-      "propertyaddress": "2211 Ala Wai Blvd, Honolulu, HI, 96815",
+      "streetaddress": "2211 Ala Wai Blvd",
+      "city": "Honolulu",
+      "state": "HI",
+      "image": "https://ssl.cdn-redfin.com/photo/169/mbpaddedwide/879/genMid.201630879_0.jpg",
+      "zipcode":96815,
       "unitnumber": "1520",
-      "propertytype": "House",
+      "propertytype": "HOUSE",
       "rentprice": 1500,
       "beds": 2,
       "baths": 1,
@@ -33,9 +41,13 @@
       "description": "Blah Blah Blah"
     },
     {
-      "propertyaddress": "2211 Ala Wai Blvd, Honolulu, HI, 96815",
+      "streetaddress": "2211 Ala Wai Blvd",
+      "city": "Honolulu",
+      "state": "HI",
+      "image": "https://p.rdcpix.com/v01/l75b3b043-m1xd-w640_h480_q80.jpg",
+      "zipcode":96815,
       "unitnumber": "1407",
-      "propertytype": "Townhouse",
+      "propertytype": "TOWNHOUSE",
       "rentprice": 2000,
       "beds": 2,
       "baths": 1,
