--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -67,7 +67,7 @@
       "image": "https://avatars0.githubusercontent.com/u/7494478?s=460&v=4",
       "age": "29",
       "area": "Kaimuki",
-      "preferences": "Parties allowed on the weekends",
+      "preferences": ["Parties allowed on the weekends", "Sleep at 10pm"],
       "description": "I am originally from France. I maintain a list of reports from my surf sessions. I have proof that I ran the Hana relay with an actual Team."
     }
   ]
