--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.39",
     "classnames": "^2.2.5",
+    "faker": "^4.1.0",
     "meteor-node-stubs": "^0.3.3",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
