--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -16,7 +16,8 @@
       "beds": 2,
       "baths": 1,
       "squarefeet": 300,
-      "description": "Blah Blah Blah"
+      "description": "Blah Blah Blah",
+      "owner": "john@foo.com"
     },
     {
       "streetaddress": "2211 Ala Wai Blvd",
@@ -30,7 +31,8 @@
       "beds": 2,
       "baths": 1,
       "squarefeet": 300,
-      "description": "Blah Blah Blah"
+      "description": "Blah Blah Blah",
+      "owner": "john@foo.com"
     },
     {
       "streetaddress": "2211 Ala Wai Blvd",
@@ -44,7 +46,8 @@
       "beds": 2,
       "baths": 1,
       "squarefeet": 300,
-      "description": "Blah Blah Blah"
+      "description": "Blah Blah Blah",
+      "owner": "john@foo.com"
     }
   ],
   "defaultContacts": [
@@ -73,6 +76,7 @@
   ]
 
 }
+
 
 
 
