--- a/config/settings.production.json
+++ b/config/settings.production.json
@@ -16,7 +16,8 @@
       "beds": 2,
       "baths": 1,
       "squarefeet": 300,
-      "description": "Blah Blah Blah"
+      "description": "Blah Blah Blah",
+      "owner": "john@foo.com"
     },
     {
       "streetaddress": "2211 Ala Wai Blvd",
@@ -30,7 +31,8 @@
       "beds": 2,
       "baths": 1,
       "squarefeet": 300,
-      "description": "Blah Blah Blah"
+      "description": "Blah Blah Blah",
+      "owner": "john@foo.com"
     },
     {
       "streetaddress": "2211 Ala Wai Blvd",
@@ -44,7 +46,8 @@
       "beds": 2,
       "baths": 1,
       "squarefeet": 300,
-      "description": "Blah Blah Blah"
+      "description": "Blah Blah Blah",
+      "owner": "john@foo.com"
     }
   ],
   "defaultContacts": [
@@ -67,7 +70,7 @@
       "image": "https://avatars0.githubusercontent.com/u/7494478?s=460&v=4",
       "age": "29",
       "area": "Kaimuki",
-      "preferences": "Parties allowed on the weekends",
+      "preferences": ["Parties allowed on the weekends", "Sleep at 10pm"],
       "description": "I am originally from France. I maintain a list of reports from my surf sessions. I have proof that I ran the Hana relay with an actual Team."
     }
   ],
