Added basic add profile through user drop down 'my profile'

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -55,7 +55,7 @@
       "firstName": "Philip",
       "lastName": "Johnson",
       "type": "Renter",
-      "owner": "john@foo.com",
+      "owner": "test@foo.com",
       "image": "https://philipmjohnson.github.io/images/philip2.jpeg",
       "age": "20",
       "area": "Manoa",
@@ -66,7 +66,7 @@
       "firstName": "Henri",
       "lastName": "Casanova",
       "type": "Tenant",
-      "owner": "john@foo.com",
+      "owner": "admin@foo.com",
       "image": "https://avatars0.githubusercontent.com/u/7494478?s=460&v=4",
       "age": "29",
       "area": "Kaimuki",
