Finish Housing Viewing Page

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -11,12 +11,13 @@
       "image": "https://43b301fb2f83bd2719f4-7e2c9a1717b3351cc628e38f0a1ac906.ssl.cf5.rackcdn.com/201803681-condo-townhouse-1xhfwr8-m.jpg",
       "zipcode":96815,
       "unitnumber": "1407",
-      "propertytype": "CONDO/APARTMENT UNIT",
+      "propertytype": "CONDO",
       "rentprice": 2000,
       "beds": 2,
       "baths": 1,
       "squarefeet": 300,
-      "description": "Blah Blah Blah"
+      "description": "Blah Blah Blah",
+      "owner": "john@foo.com"
     },
     {
       "streetaddress": "2211 Ala Wai Blvd",
@@ -30,7 +31,8 @@
       "beds": 2,
       "baths": 1,
       "squarefeet": 300,
-      "description": "Blah Blah Blah"
+      "description": "Blah Blah Blah",
+      "owner": "john@foo.com"
     },
     {
       "streetaddress": "2211 Ala Wai Blvd",
@@ -44,7 +46,8 @@
       "beds": 2,
       "baths": 1,
       "squarefeet": 300,
-      "description": "Blah Blah Blah"
+      "description": "Blah Blah Blah",
+      "owner": "john@foo.com"
     }
   ],
   "defaultContacts": [
@@ -73,7 +76,4 @@
   ]
 
 }
-
-
-
 
