--- a/app/package.json
+++ b/app/package.json
@@ -5,11 +5,15 @@
     "@babel/runtime": "^7.0.0-beta.39",
     "classnames": "^2.2.5",
     "faker": "^4.1.0",
+    "googlemaps": "^1.12.0",
+    "graphql": "^0.13.2",
+    "markerclustererplus": "^2.1.4",
     "meteor-node-stubs": "^0.3.3",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-addons-pure-render-mixin": "^15.6.2",
     "react-dom": "^16.2.0",
+    "react-google-maps": "^9.4.5",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "semantic-ui-css": "^2.3.0",
