--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
     "classnames": "^2.2.5",
     "faker": "^4.1.0",
     "geocoder": "^0.2.3",
+    "google-map-react": "^0.34.0",
     "googlemaps": "^1.12.0",
     "graphql": "^0.13.2",
     "markerclustererplus": "^2.1.4",
