--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -155,7 +155,7 @@
       "firstName": "Bruno",
       "lastName": "Mars",
       "type": "Seeker",
-      "owner": "idk@foo.com",
+      "owner": "john@foo.com",
       "image": "https://pbs.twimg.com/profile_images/952969165370884096/bK1_Bkpq.jpg",
       "age": "20",
       "area": "Manoa",
