--- a/config/settings.production.json
+++ b/config/settings.production.json
@@ -36,7 +36,7 @@
       "baths": 1,
       "squarefeet": 300,
       "description": "Blah Blah Blah",
-      "owner": "john@foo.com"
+      "owner": "test@foo.com"
     },
     {
       "streetaddress": "2211 Ala Wai Blvd",
@@ -51,7 +51,7 @@
       "baths": 1,
       "squarefeet": 300,
       "description": "Blah Blah Blah",
-      "owner": "john@foo.com"
+      "owner": "bob@foo.com"
     },
     {
       "streetaddress": "94979 Kauolu Pl",
@@ -66,7 +66,7 @@
       "baths": 1,
       "squarefeet": 500,
       "description": "Blah Blah Blah",
-      "owner": "john@foo.com"
+      "owner": "bill@foo.com"
     },
     {
       "streetaddress": "1702 Kewalo St",
@@ -81,7 +81,7 @@
       "baths": 1,
       "squarefeet": 500,
       "description": "Blah Blah Blah",
-      "owner": "john@foo.com"
+      "owner": "admin@foo.com"
     },
     {
       "streetaddress": "1543 Makiki Street",
