Update json file

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -22,7 +22,7 @@
       "beds": 2,
       "baths": 1,
       "squarefeet": 300,
-      "description": "Blah Blah Blah",
+      "description": "See the possibilities! This is a 1/1/0 unit in Waikiki/Ala Wai; from the lanai, you can view the mountain, Ala Wai Canal and the golf course",
       "owner": "john@foo.com"
     },
     {
@@ -39,7 +39,7 @@
       "beds": 2,
       "baths": 1,
       "squarefeet": 300,
-      "description": "Blah Blah Blah",
+      "description": "See the possibilities! This is a 1/1/0 unit in Waikiki/Ala Wai; from the lanai, you can view the mountain, Ala Wai Canal and the golf course",
       "owner": "test@foo.com"
     },
     {
@@ -56,7 +56,7 @@
       "beds": 2,
       "baths": 1,
       "squarefeet": 300,
-      "description": "Blah Blah Blah",
+      "description": "See the possibilities! This is a 1/1/0 unit in Waikiki/Ala Wai; from the lanai, you can view the mountain, Ala Wai Canal and the golf course",
       "owner": "bob@foo.com"
     },
     {
@@ -73,7 +73,7 @@
       "beds": 1,
       "baths": 1,
       "squarefeet": 500,
-      "description": "Blah Blah Blah",
+      "description": "Ocean and mountain views. Great landscaping and grounds, secured building, resident manager, 24 hour security & meeting room. Generator in case of blackout.",
       "owner": "bill@foo.com"
     },
     {
@@ -90,7 +90,7 @@
       "beds": 2,
       "baths": 1,
       "squarefeet": 500,
-      "description": "Blah Blah Blah",
+      "description": " Prime town location, conveniently located near Punahou School, UH Manoa, transit, shops, and restaurants.",
       "owner": "bill@foo.com"
     },
     {
@@ -107,7 +107,7 @@
       "beds": 2,
       "baths": 1,
       "squarefeet": 500,
-      "description": "Blah Blah Blah",
+      "description": "Located in Makiki, at 1543 Makiki Street, just across the street from the Makiki Park offering a swimming pool, play ground, basketball and tennis courts",
       "owner": "john@foo.com"
     },
     {
@@ -124,7 +124,7 @@
       "beds": 1,
       "baths": 1,
       "squarefeet": 400,
-      "description": "Blah Blah Blah",
+      "description": "Large, bright and clean studio, located on top floor in the building, with view of Punchbowl and Tantalus! Secured lobby and indoor community laundry located on-site. Rent includes Electric, water, sewer, garbage and gas!",
       "owner": "john@foo.com"
     }
   ],
