--- a/config/settings.production.json
+++ b/config/settings.production.json
@@ -22,7 +22,7 @@
       "beds": 2,
       "baths": 1,
       "squarefeet": 300,
-      "description": "Blah Blah Blah",
+      "description": "See the possibilities! This is a 1/1/0 unit in Waikiki/Ala Wai; from the lanai, you can view the mountain, Ala Wai Canal and the golf course",
       "owner": "john@foo.com"
     },
     {
@@ -39,7 +39,7 @@
       "beds": 2,
       "baths": 1,
       "squarefeet": 300,
-      "description": "Blah Blah Blah",
+      "description": "See the possibilities! This is a 1/1/0 unit in Waikiki/Ala Wai; from the lanai, you can view the mountain, Ala Wai Canal and the golf course",
       "owner": "test@foo.com"
     },
     {
@@ -56,7 +56,7 @@
       "beds": 2,
       "baths": 1,
       "squarefeet": 300,
-      "description": "Blah Blah Blah",
+      "description": "See the possibilities! This is a 1/1/0 unit in Waikiki/Ala Wai; from the lanai, you can view the mountain, Ala Wai Canal and the golf course",
       "owner": "bob@foo.com"
     },
     {
@@ -73,7 +73,7 @@
       "beds": 1,
       "baths": 1,
       "squarefeet": 500,
-      "description": "Blah Blah Blah",
+      "description": "Ocean and mountain views. Great landscaping and grounds, secured building, resident manager, 24 hour security & meeting room. Generator in case of blackout.",
       "owner": "bill@foo.com"
     },
     {
@@ -90,8 +90,8 @@
       "beds": 2,
       "baths": 1,
       "squarefeet": 500,
-      "description": "Blah Blah Blah",
-      "owner": "admin@foo.com"
+      "description": " Prime town location, conveniently located near Punahou School, UH Manoa, transit, shops, and restaurants.",
+      "owner": "bill@foo.com"
     },
     {
       "streetaddress": "1543 Makiki Street",
@@ -107,7 +107,7 @@
       "beds": 2,
       "baths": 1,
       "squarefeet": 500,
-      "description": "Blah Blah Blah",
+      "description": "Located in Makiki, at 1543 Makiki Street, just across the street from the Makiki Park offering a swimming pool, play ground, basketball and tennis courts",
       "owner": "john@foo.com"
     },
     {
@@ -124,7 +124,7 @@
       "beds": 1,
       "baths": 1,
       "squarefeet": 400,
-      "description": "Blah Blah Blah",
+      "description": "Large, bright and clean studio, located on top floor in the building, with view of Punchbowl and Tantalus! Secured lobby and indoor community laundry located on-site. Rent includes Electric, water, sewer, garbage and gas!",
       "owner": "john@foo.com"
     }
   ],
@@ -143,7 +143,7 @@
     {
       "firstName": "Henri",
       "lastName": "Casanova",
-      "type": "Seeker",
+      "type": "Lister",
       "owner": "admin@foo.com",
       "image": "https://avatars0.githubusercontent.com/u/7494478?s=460&v=4",
       "age": "29",
@@ -154,7 +154,7 @@
     {
       "firstName": "Bruno",
       "lastName": "Mars",
-      "type": "Seeker",
+      "type": "Lister",
       "owner": "john@foo.com",
       "image": "https://pbs.twimg.com/profile_images/952969165370884096/bK1_Bkpq.jpg",
       "age": "20",
@@ -184,16 +184,7 @@
       "preferences": ["No smoking", "No drinking"],
       "description": "I am an English actress and model."
     }
-  ],
-  "galaxy.meteor.com": {
-    "env": {
-      "MONGO_URL": "mongodb://arnold:shek@ds143099.mlab.com:43099/haledb"
-
-    }
-  }
+  ]
 }
-
-
-
 
 
